Arreglado inglés. BeanTrips da fallo porque esta sin cerar el TripService

--- a/sdi2-38/WebContent/templates/template-inicio.xhtml
+++ b/sdi2-38/WebContent/templates/template-inicio.xhtml
@@ -22,6 +22,8 @@
 				</tr>
 			</table>
 			<p:menubar id="mimenu">
+				<p:menuitem style="float:left" label="#{msgs.trip_list}"
+					/>
 				<p:submenu style="float:right" label="#{msgs.textoIdioma}"
 					icon="ui-icon-document">
 					<p:menuitem id="linkespa" value="#{msgs.enlaceIdiomaES}"
