Añadida i18n a todas las vistas. Eliminada vista de modificacion de datos de usurio.

--- a/sdi2-38/WebContent/templates/template-inicio.xhtml
+++ b/sdi2-38/WebContent/templates/template-inicio.xhtml
@@ -22,13 +22,13 @@
 				</tr>
 			</table>
 			<p:menubar id="mimenu">
-				<p:menuitem style="float:left" label="#{msgs.trip_list}"
+				<p:menuitem style="float:left" label="#{msgs.enlace_listarViajes}"
 					/>
 				<p:submenu style="float:right" label="#{msgs.textoIdioma}"
 					icon="ui-icon-document">
-					<p:menuitem id="linkespa" value="#{msgs.enlaceIdiomaES}"
+					<p:menuitem id="linkespa" value="#{msgs.enlace_idiomaES}"
 						actionListener="#{settings.setSpanish}" update="@all" />
-					<p:menuitem id="linkingles" value="#{msgs.enlaceIdiomaEN}"
+					<p:menuitem id="linkingles" value="#{msgs.enlace_idiomaEN}"
 						actionListener="#{settings.setEnglish}" update="@all" />
 				</p:submenu>
 			</p:menubar>
