--- a/sdi2-38/WebContent/templates/template-general-sinopciones.xhtml
+++ b/sdi2-38/WebContent/templates/template-general-sinopciones.xhtml
@@ -8,18 +8,19 @@
 
 <f:view locale="#{settings.locale}">
 	<h:head>
-		<title>#{msgs.tituloHead}</title>
+		<meta http-equiv="Content-type" content="text/html; charset=UTF-8" />
+		<title>#{msgs.titulo_aplicacion}</title>
 	</h:head>
 	<h:body>
 		<h:form id="cabecera">
 			<center>
-				<h1>#{msgs.tituloAplicacion}</h1>
+				<h1>#{msgs.titulo_aplicacion}</h1>
 			</center>
 			<br />
 			<br />
 			<table border="5" align="center">
 				<tr>
-					<th class="title"><ui:insert name="titulo">#{msgs.tituloDefectoCabecera}</ui:insert>
+					<th class="title"><ui:insert name="titulo"><!-- #{msgs.tituloDefectoCabecera} --></ui:insert>
 					</th>
 				</tr>
 			</table>
@@ -27,9 +28,9 @@
 
 		</h:form>
 
-		<ui:insert name="cuerpo">#{msgs.tituloDefectoCuerpo}</ui:insert>
+		<ui:insert name="cuerpo"><!-- #{msgs.tituloDefectoCuerpo} --></ui:insert>
 
-		<ui:insert name="pie">#{msgs.tituloPie}</ui:insert>
+		<ui:insert name="pie">#{msgs.titulo_pie}</ui:insert>
 
 	</h:body>
 </f:view>
