--- a/sdi2-38/WebContent/templates/template-inicio.xhtml
+++ b/sdi2-38/WebContent/templates/template-inicio.xhtml
@@ -8,6 +8,7 @@
 <f:view locale="#{settings.locale}">
 	<h:head>
 		<meta http-equiv="Content-type" content="text/html; charset=UTF-8" />
+		<title>#{msgs.titulo_aplicacion}</title>
 	</h:head>
 	<h:body>
 		<h:form id="form-cabecera">
@@ -16,7 +17,7 @@
 					<th class="title">
 						<h1>
 							<ui:insert name="titulo">
-								#{msgs.tituloDefectoCabecera}</ui:insert>
+								<!-- #{msgs.tituloDefectoCabecera} --></ui:insert>
 						</h1>
 					</th>
 				</tr>
@@ -24,7 +25,7 @@
 			<p:menubar id="mimenu">
 				<p:menuitem style="float:left" label="#{msgs.enlace_listarViajes}"
 					action="#{tripsController.listado}"/>
-				<p:submenu style="float:right" label="#{msgs.textoIdioma}"
+				<p:submenu style="float:right" label="#{msgs.menu_Idioma}"
 					icon="ui-icon-document">
 					<p:menuitem id="linkespa" value="#{msgs.enlace_idiomaES}"
 						actionListener="#{settings.setSpanish}" update="@all" />
@@ -34,11 +35,11 @@
 			</p:menubar>
 		</h:form>
 
-		<ui:insert name="cuerpo">#{msgs.tituloDefectoCuerpo}</ui:insert>
+		<ui:insert name="cuerpo"><!-- #{msgs.tituloDefectoCuerpo} --></ui:insert>
 
 		<br />
 		<br />
-		<ui:insert name="pie">#{msgs.tituloPie}</ui:insert>
+		<ui:insert name="pie">#{msgs.titulo_pie}</ui:insert>
 
 	</h:body>
 </f:view>
