--- a/sdi2-38/WebContent/templates/template-inicio.xhtml
+++ b/sdi2-38/WebContent/templates/template-inicio.xhtml
@@ -23,8 +23,14 @@
 				</tr>
 			</table>
 			<p:menubar id="mimenu">
-				<p:menuitem style="float:left" label="#{msgs.enlace_listarViajes}"
+				<p:submenu style="float:left" label="#{msgs.menu_Opciones}"
+					icon="ui-icon-document">
+					<p:menuitem id="linkOpciones" style="float:left" 
+					value="#{msgs.enlace_listarViajes}"
 					action="#{tripsController.listado}"/>
+					<p:menuitem id="linkRegistrarse" style="float:left" 
+					value="#{msgs.enlace_registrarse}"/>
+				</p:submenu>
 				<p:submenu style="float:right" label="#{msgs.menu_Idioma}"
 					icon="ui-icon-document">
 					<p:menuitem id="linkespa" value="#{msgs.enlace_idiomaES}"
