Pequeñas modificaciones en los templates

--- a/sdi2-38/WebContent/templates/template-general-sinopciones.xhtml
+++ b/sdi2-38/WebContent/templates/template-general-sinopciones.xhtml
@@ -24,7 +24,7 @@
 					</th>
 				</tr>
 			</table>
-			<ui:include src="/snippets/menu-sinopciones.xhtml" />
+			<ui:include src="/snippets/menu-idiomas.xhtml" />
 
 		</h:form>
 
