Añadida navegación para cerrar sesión. Añadido jsf en principalRegistrado.xhtml.

--- a/sdi2-38/WebContent/templates/template-general.xhtml
+++ b/sdi2-38/WebContent/templates/template-general.xhtml
@@ -29,7 +29,9 @@
 
 		<br />
 		<br />
-		<ui:insert name="pie">#{msgs.titulo_pie}</ui:insert>
+		<ui:insert name="pie"></ui:insert>
+		<br />
+		#{msgs.titulo_pie}
 
 	</h:body>
 </f:view>
