--- a/sdi2-38/WebContent/templates/template-inicio.xhtml
+++ b/sdi2-38/WebContent/templates/template-inicio.xhtml
@@ -45,7 +45,7 @@
 
 		<br />
 		<br />
-		<ui:insert name="pie">#{msgs.titulo_pie}</ui:insert>
+		<ui:insert name="pie"><em>#{msgs.titulo_pie}</em></ui:insert>
 
 	</h:body>
 </f:view>
