--- a/sdi2-38/WebContent/templates/template-general.xhtml
+++ b/sdi2-38/WebContent/templates/template-general.xhtml
@@ -17,7 +17,6 @@
 					<th class="title">
 						<h1>
 							<ui:insert name="titulo">
-								<!-- #{msgs.tituloDefectoCabecera} -->
 							</ui:insert>
 						</h1>
 					</th>
@@ -27,12 +26,12 @@
 		</h:form>
 
 		<ui:insert name="cuerpo">
-			<!-- #{msgs.tituloDefectoCuerpo} -->
 		</ui:insert>
 
 		<br />
 		<br />
-		<ui:insert name="pie">#{msgs.titulo_pie}</ui:insert>
+		<ui:insert name="pie"></ui:insert>
+		<em>#{msgs.titulo_pie}</em>
 
 	</h:body>
 </f:view>
